[gd_scene load_steps=26 format=3 uid="uid://bvn4ssrvphh28"]

[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="1_mp3ie"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_vwd38"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/ProblemSelection/solution_creation_info.gd" id="2_6e24i"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes_and_scripts/Components/button_sound_component.tscn" id="4_j2ks7"]
[ext_resource type="Theme" uid="uid://cu3v7nxs2h2hu" path="res://Resources/Themes/spin_box.tres" id="5_yylr5"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Classes/spin_box.gd" id="7_aqn1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cixn1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vj8pa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l348t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkt55"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mimsk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41p5t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_luo7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_im77j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8gnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f27kb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kdwt3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tb8fc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cv31x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1nme1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6k5qt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qenc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajwmu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ybmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1k3s"]

[node name="SolutionCreationInfo" type="PanelContainer"]
material = ExtResource("1_vwd38")
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 150)
offset_right = 121.0
offset_bottom = 200.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cixn1")
script = ExtResource("2_6e24i")
title = "3. Solution Creation"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Body" type="Label" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
text = "- Draw solutions to the problem.
- Submit solutions using puzzle tab."
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="CustomSolutions" type="CheckButton" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vj8pa")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l348t")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mkt55")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mimsk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41p5t")
theme_override_styles/normal = SubResource("StyleBoxEmpty_luo7v")
text = "Custom solutions"

[node name="ButtonSoundComponent" parent="VBoxContainer/PanelContainer2/VBoxContainer/CustomSolutions" instance=ExtResource("4_j2ks7")]

[node name="AllowOtherSolutions" type="CheckButton" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
use_parent_material = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_im77j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_g8gnj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f27kb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kdwt3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tb8fc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cv31x")
text = "Allow other
solutions"

[node name="ButtonSoundComponent" parent="VBoxContainer/PanelContainer2/VBoxContainer/AllowOtherSolutions" instance=ExtResource("4_j2ks7")]

[node name="NoSolutions" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/NoSolutions"]
layout_mode = 2
texture = ExtResource("1_mp3ie")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/NoSolutions"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "No custom solutions created"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="CustomSolutionCount" type="CheckButton" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_1nme1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6k5qt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_qenc3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ajwmu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0ybmp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_t1k3s")
text = "Custom required
solution count"

[node name="ButtonSoundComponent" parent="VBoxContainer/PanelContainer/VBoxContainer/CustomSolutionCount" instance=ExtResource("4_j2ks7")]

[node name="SolutionCountContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer"]
use_parent_material = true
layout_mode = 2
text = "Required
solution count:"
vertical_alignment = 1

[node name="SolutionCountContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 1

[node name="SolutionCount" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer/SolutionCountContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
theme = ExtResource("5_yylr5")
min_value = 1.0
max_value = 4.0
value = 1.0
alignment = 1
update_on_text_changed = true
script = ExtResource("7_aqn1d")

[connection signal="toggled" from="VBoxContainer/PanelContainer2/VBoxContainer/CustomSolutions" to="." method="_on_custom_solutions_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer2/VBoxContainer/AllowOtherSolutions" to="." method="_on_allow_other_solutions_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/VBoxContainer/CustomSolutionCount" to="." method="_on_custom_solution_count_toggled"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/SolutionCountContainer/SolutionCountContainer/SolutionCount" to="." method="_on_solution_count_value_changed"]
